--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^11.0.4",
-    "astro": "^4.15.4"
+    "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/rajdhani": "^5.1.0",
+    "astro": "^4.15.4",
+    "tailwindcss": "^3.4.11"
   }
 }
