--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "portfolio-gaboelc",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/cloudflare": "^11.1.0",
-    "@astrojs/tailwind": "^5.1.2",
-    "@fontsource/rajdhani": "^5.1.0",
-    "astro": "^4.16.3",
-    "tailwindcss": "^3.4.13"
-  }
+	"name": "portfolio-gaboelc",
+	"type": "module",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"clean-build": "pnpm cache clean",
+		"build": "astro build",
+		"preview": "astro preview",
+		"astro": "astro"
+	},
+	"dependencies": {
+		"@astrojs/cloudflare": "^11.1.0",
+		"@astrojs/tailwind": "^5.1.2",
+		"@fontsource/rajdhani": "^5.1.0",
+		"astro": "^4.16.3",
+		"tailwindcss": "^3.4.13"
+	}
 }
